2006-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:
	
	Renice when thumbnailing. Patch taken from suse rpm, by Federico Mena
	Quintero. 
	Don't focus the hidden window on map.
	
	Many thanks for never sending these patches to me, suse guys!

2006-10-18  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update intltool req to 0.35.0.

2006-07-14  Christian Persch  <chpe@cvs.gnome.org>

	Commit uncommitted work before svn migration.

	R COPYING.MPL:
	* COPYING.README:
	* Makefile.am:
	* src/Components.cpp:
	* src/Components.h:
	* src/Embed.cpp:
	* src/Embed.h:
	* src/Listener.cpp:
	* src/Listener.h:
	* src/Prefs.cpp:
	* src/Prefs.h:
	* src/Printer.cpp:
	* src/Printer.h:
	* src/Writer.cpp:
	* src/Writer.h:
	* src/main.cpp:

	Gecko is free now, so we can be LGPL only too!

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 0.2 ===

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:
	* src/Makefile.am:

	Build with xulrunner trunk too, and use AC_C_BIGENDIAN
	to check the endianness.

	* src/Prefs.cpp:

	Use the document font gconf key.

	* src/Writer.cpp:

	Use stock endianness define.

	* src/main.cpp:

	Fix some compile warnings, and add support for xulrunner
	trunk.

2006-01-15 Christian Persch <chpe@cvs.gnome.org>
 
	* m4/gecko.m4:

	Updated from Epiphany: correct gecko version check
	if mozilla-config.h includes other files (multi-arch).

2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/thumbnailer.schemas.in:
	* src/Embed.cpp:
	* src/Embed.h:
	* src/Makefile.am:
	* src/Printer.cpp:
	* src/main.cpp:

	Add support for processing multiple files in a row.

2005-12-08  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Turn off image animation and text blinking. Patch by Robert
	O'Callahan.

2005-12-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:
