@@ -1,3 +1,9 @@
+2006-12-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/thumbnailer.schemas.in:
+
+	Add thumbnailer schemas for application/xhtml+xml.
+
 2006-11-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/main.cpp:
